@@ -9,15 +9,16 @@ import org.web3j.abi.datatypes.Address;
 import org.web3j.abi.datatypes.Type;
 import org.web3j.abi.datatypes.Utf8String;
 import org.web3j.abi.datatypes.generated.Uint256;
-import java.util.Arrays;
 
 import java.math.BigInteger;
+import java.util.Arrays;
 import java.util.List;
 
 @Slf4j
 public class BlockchainHelper {
 
-    private BlockchainHelper() {}
+    private BlockchainHelper() {
+    }
 
     // ==================== 1. EXTRACT TỪ TOPIC (INDEXED) ====================
 
@@ -68,13 +69,10 @@ public class BlockchainHelper {
             // FIX: Cast về (TypeReference) để Java chấp nhận List<TypeReference<Type>>
             // Bản chất: new TypeReference<Utf8String>() {} trả về TypeReference<Utf8String>
             // Nhưng FunctionReturnDecoder cần TypeReference<Type>
-            @SuppressWarnings("rawtypes")
-            TypeReference<Utf8String> typeRef = new TypeReference<Utf8String>() {};
+            @SuppressWarnings("rawtypes") TypeReference<Utf8String> typeRef = new TypeReference<Utf8String>() {
+            };
 
-            List<Type> decoded = FunctionReturnDecoder.decode(
-                    data,
-                    Arrays.asList((TypeReference<Type>) (Object) typeRef)
-            );
+            List<Type> decoded = FunctionReturnDecoder.decode(data, List.of((TypeReference<Type>) (Object) typeRef));
 
             if (decoded != null && !decoded.isEmpty()) {
                 return (String) decoded.get(0).getValue();
